# fast-weight-attention

./: .gitignore  README.md  pyproject.toml  train_toy.py
fast_weight_attention/: __init__.py  chunk_manager.py  fast_weight_attention.py
tests/: test_fast_weight_attention.py
