[project]
name = "fast-weight-attention"
version = "0.1.4"
description = "Fast Weight Attention"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'attention',
    'memory'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "adam-atan2-pytorch>=0.2.8",
    "einx>=0.3.0",
    "einops>=0.8.1",
    "torch>=2.5",
    "termcolor>=3.3.0",
]

[project.urls]
Homepage = "https://pypi.org/project/fast-weight-attention/"
Repository = "https://codeberg.org/lucidrains/fast-weight-attention"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "fast_weight_attention",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["fast_weight_attention"]
